--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "npx sass scss/global.scss css/global.css --watch",
-    "build": "npx sass scss/global.scss css/global.css --style=compressed"
+    "build": "npx sass scss/global.scss css/global.css --style=compressed",
+    "deploy": "npm run build && gh-pages -d ."
   },
   "repository": {
     "type": "git",
