--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
   "bugs": {
     "url": "https://github.com/CodyKelly/clipboard-landing-page/issues"
   },
-  "homepage": "https://github.com/CodyKelly/clipboard-landing-page#readme",
-  "devDependencies": {
-    "modern-css-reset": "^1.4.0"
-  }
+  "homepage": "https://github.com/CodyKelly/clipboard-landing-page#readme"
 }
